all warnings are removed

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "frist_project",
-  "homepage": "https://sulphitic786.github.io/testerForm",
+  "name": "todo-ampio",
+  "homepage": "https://sulphitic786.github.io/todo-ampio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
